# rolling_shutter_made_practical

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md  setup.sh
benchmark/: benchmark_rs_superansac.cpp
examples/: download_tum_rs.sh  plot_benchmark.py  run_real_data.py  run_synthetic.sh
rs_overlay/: apply_overlay.sh
rs_overlay/include/estimators/: abstract_solver.h  estimator_rs_essential_matrix.h  rs_utils.h  solver_essential_matrix_five_point_nister.h  solver_rs_baselines.h  solver_rs_essential_matrix_bundle_adjustment.h  solver_rs_essential_matrix_dai.h  solver_rs_essential_matrix_five_point.h  solver_rs_essential_matrix_four_ac.h  solver_rs_essential_matrix_seven_ac_direct.h  solver_rs_essential_matrix_six_ac_eigval.h
rs_overlay/include/estimators/numerical_optimizer/: bundle.h
rs_overlay/include/models/: model.h
rs_overlay/include/samplers/: uniform_random_sampler.h
rs_overlay/python/: CMakeLists.txt  pybind_functions.cpp  pybind_helpers.h  pybind_module.cpp  pybind_rs_functions.cpp
rs_overlay/tests/datasets/: euroc_mav.py  tum_rs.py
rs_overlay/tests/essential_matrix/: rs_ac_extractor.py  tester_rs_superansac.py
